k8s-yamls/kafka-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  labels:
    name: kafka-client
    tier: backend
spec:
  containers:
  - name: kafka-client
    image: alazidis/kafka_admin_client
    ports:
      - containerPort: 4010
