k8s-yamls/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client
      labels:
        app: client
        tier: frontend
    spec:
      containers:
      - name: client
        image: alazidis/blog-microservices-client
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
  - name: client
    port: 3000
    protocol: TCP
    targetPort: 3000
