k8s-yamls/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
     name: comments
     labels:
       app: comments
       tier: backend
    spec:
     containers:
     - name: comments
       image: alazidis/blog-microservices-comments
       ports:
         - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  selector:
    app: comments
  ports:
  - name: comments
    port: 5000
    protocol: TCP
    targetPort: 5000
