k8s-yamls/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
spec:
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
        tier: dashboard
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha.4
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
