k8s-yamls/posts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
spec:
  selector:
    app: posts
  type: LoadBalancer
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
