k8s-yamls/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      name: posts
      labels:
        tier: backend
        app: posts 
    spec:
      containers:
      - name: posts
        image: alazidis/blog-microservices-posts
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: posts-svc
spec:
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
